fix spacing issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4309,7 +4309,7 @@ color: #FFFFFF;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  height: 67vh;
+  height: 58vh;
 }
 
 @media only screen and (max-width: 991px) {
